overflow bug

--- a/css/detail.css
+++ b/css/detail.css
@@ -78,6 +78,7 @@ footer{
     position: relative;
     min-height: 95vh;
     padding: 2rem 30rem;
+    overflow: hidden;
 }
 
 .content p{
